--- a/calculator.ui
+++ b/calculator.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>326</width>
-    <height>461</height>
+    <width>331</width>
+    <height>501</height>
    </rect>
   </property>
   <property name="font">
@@ -19,27 +19,11 @@
   <property name="windowTitle">
    <string>Calculator</string>
   </property>
-  <widget class="QTextBrowser" name="textBrowser">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>291</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>RedDeadCyrillic2</family>
-     <pointsize>16</pointsize>
-    </font>
-   </property>
-  </widget>
   <widget class="QPushButton" name="pushButton_1">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>90</y>
+     <y>140</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -61,7 +45,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>90</y>
+     <y>140</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -80,7 +64,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>90</y>
+     <y>140</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -99,7 +83,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>150</y>
+     <y>200</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -118,7 +102,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>150</y>
+     <y>200</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -137,7 +121,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>150</y>
+     <y>200</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -156,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>210</y>
+     <y>260</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -175,7 +159,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>210</y>
+     <y>260</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -194,7 +178,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>210</y>
+     <y>260</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -213,7 +197,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>270</y>
+     <y>320</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -232,7 +216,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>270</y>
+     <y>320</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -251,7 +235,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>270</y>
+     <y>320</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -270,7 +254,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>330</y>
+     <y>380</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -289,7 +273,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>330</y>
+     <y>380</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -308,9 +292,9 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>330</y>
+     <y>380</y>
      <width>93</width>
-     <height>51</height>
+     <height>111</height>
     </rect>
    </property>
    <property name="font">
@@ -327,7 +311,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>390</y>
+     <y>440</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -346,7 +330,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>390</y>
+     <y>440</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -364,8 +348,8 @@
   <widget class="QPushButton" name="pushButton_ce">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>390</y>
+     <x>20</x>
+     <y>80</y>
      <width>93</width>
      <height>51</height>
     </rect>
@@ -378,6 +362,47 @@
    </property>
    <property name="text">
     <string>CE</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_pow">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>80</y>
+     <width>93</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>^</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_delsym">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>80</y>
+     <width>93</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>C</string>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEdit">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>291</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
    </property>
   </widget>
  </widget>
