--- a/calculator.ui
+++ b/calculator.ui
@@ -292,9 +292,9 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>380</y>
+     <y>440</y>
      <width>93</width>
-     <height>111</height>
+     <height>51</height>
     </rect>
    </property>
    <property name="font">
@@ -403,6 +403,19 @@
     <font>
      <pointsize>16</pointsize>
     </font>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>380</y>
+     <width>91</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>.</string>
    </property>
   </widget>
  </widget>
