--- a/calculator.ui
+++ b/calculator.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>331</width>
-    <height>501</height>
+    <width>332</width>
+    <height>509</height>
    </rect>
   </property>
   <property name="font">
@@ -18,6 +18,19 @@
   </property>
   <property name="windowTitle">
    <string>Calculator</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">
+
+QPushButton{
+	text-align: center;
+}
+QPushButton:hover{
+	background-color:silver;
+}
+QPushButton:pressed{
+	background-color:gray;
+}</string>
   </property>
   <widget class="QPushButton" name="pushButton_1">
    <property name="geometry">
@@ -373,6 +386,12 @@
      <height>51</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>RedDeadCyrillic2</family>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>^</string>
    </property>
@@ -386,23 +405,14 @@
      <height>51</height>
     </rect>
    </property>
-   <property name="text">
-    <string>C</string>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="textEdit">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>291</width>
-     <height>51</height>
-    </rect>
-   </property>
    <property name="font">
     <font>
-     <pointsize>16</pointsize>
+     <family>RedDeadCyrillic2</family>
+     <pointsize>14</pointsize>
     </font>
+   </property>
+   <property name="text">
+    <string>C</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
@@ -416,6 +426,25 @@
    </property>
    <property name="text">
     <string>.</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>291</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>RedDeadCyrillic2</family>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
   </widget>
  </widget>
